tooling/nargo_cli/tests/snapshots/compile_failure/noirc_frontend_tests_arithmetic_generics_arithmetic_generics_checked_cast_indirect_zeros/execute__tests__noirc_frontend_tests_arithmetic_generics_arithmetic_generics_checked_cast_indirect_zeros_output.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: "&format!(\"success: {:?}\\nexit_code: {}\\n----- stdout -----\\n{}\\n----- stderr -----\\n{}\",\noutput.status.success(), output.status.code().unwrap_or(!0), stdout, stderr)"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
error: Could not determine array length `(0 % 0)`, encountered error: `Modulo on Field elements: 0 % 0`
  ┌─ src/main.nr:9:13
  │
9 │             N
  │             -
  │

Aborting due to 1 previous error
